// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tests Button renders correctly 1`] = `
<button
  className="sc-bdVaJa jgwijM"
  onClick={[Function]}
>
  Default Button
</button>
`;

exports[`Button tests Contained button renders correctly 1`] = `
<button
  className="sc-bdVaJa sc-ifAKCX dxSsjh"
  color="#FFFFFF"
  onClick={[Function]}
>
  Contained Button
</button>
`;

exports[`Button tests Fab button renders correctly 1`] = `
<button
  className="sc-bdVaJa sc-EHOje hbgBtv"
  color="#FFFFFF"
  onClick={[Function]}
>
  Fab Button
</button>
`;

exports[`Button tests Outline button renders correctly 1`] = `
<button
  className="sc-bdVaJa sc-htpNat efHjEt"
  color="#FFFFFF"
  onClick={[Function]}
>
  Outline Button
</button>
`;

exports[`Button tests Text button renders correctly 1`] = `
<button
  className="sc-bdVaJa sc-bwzfXH dSqEOj"
  color="#FFFFFF"
  onClick={[Function]}
>
  Text Button
</button>
`;

exports[`Button tests Toggle button renders correctly 1`] = `
<button
  className="sc-bdVaJa sc-bxivhb hLRFVR"
  color="#FFFFFF"
  onClick={[Function]}
>
  Toggle Button
</button>
`;
